resources/css/pedigree-chart.css
/* Form */
.form-element-description {
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
}

#webtrees-pedigree-chart-form .row {
    margin-left: 0;
    margin-right: 0;
}

/* SVG */
.webtrees-pedigree-chart-container {
    position: relative;
    font-size: unset;
    display: flex;
    flex: auto;
}

.webtrees-pedigree-chart-container svg {
    display: block;
    margin: auto;
    cursor: move;
    /*cursor: -webkit-grab;*/
    /*cursor: -moz-grab;*/
    cursor: grab;
    /*-webkit-filter: drop-shadow(3px 1px 3px rgba(0, 0, 0, 0.4));*/
    /*filter: drop-shadow(3px 1px 3px rgba(0, 0, 0, 0.4));*/
}

.webtrees-pedigree-chart-container svg:active {
    cursor: grabbing;
    /*cursor: -webkit-grabbing;*/
}

.webtrees-pedigree-chart-container svg .person {
    cursor: pointer;
}

.webtrees-pedigree-chart-container svg rect.background {
    fill: none;
    pointer-events: all;
}

.webtrees-pedigree-chart-container div.overlay {
    position: absolute;
    top: 0;
    left: 0;
    text-align: center;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    border: 0;
    font: 10px sans-serif;
    pointer-events: none;
    transition: opacity ease-in-out;
    transition-duration: 0s;
    backdrop-filter: blur(5px);
}

@supports (-webkit-backdrop-filter: none) {
    .webtrees-pedigree-chart-container div.overlay {
        -webkit-backdrop-filter: blur(1em);
    }
}

.webtrees-pedigree-chart-container div.overlay .tooltip {
    font-size: 22px;
    color: #5a6268;
    position: relative;
    margin: 0;
    top: 50%;
    /*-webkit-transform: translateY(-50%);*/
    /*-ms-transform: translateY(-50%);*/
    transform: translateY(-50%);
    opacity: 1;
    text-align: center;
}

@supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
    .webtrees-pedigree-chart-container div.overlay {
        background: rgba(0, 0, 0, 0.5);
    }

    .webtrees-pedigree-chart-container div.overlay .tooltip {
        color: white;
    }
}

